test/error/error.input059.zc
Unknown variable or function:y on line 3
